src/objects/Ter_Acta_Encuesta__c.object
<CustomObject>
    <fields>
        <fullName>Permanece_el_despachador_en_la_isla__c</fullName>
        <inlineHelpText>¿Permanece el despachador en la isla?</inlineHelpText>
        <label>¿Permanece el despachador en la isla?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permiso_de_vertimientos__c</fullName>
        <inlineHelpText>¿Si a la estación le aplica tener permiso de vertimiento lo tiene vigente o en tramite?</inlineHelpText>
        <label>Permiso de vertimientos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilar_ambiental_infraestructura__c</fullName>
        <inlineHelpText>Comentarios pilar ambiental infraestructura</inlineHelpText>
        <label>Pilar ambiental infraestructura</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pistolas__c</fullName>
        <inlineHelpText>¿No presenta fugas?</inlineHelpText>
        <label>Pistolas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portan_despachadores_uniforme_completo__c</fullName>
        <inlineHelpText>¿Portan los despachadores sus uniformes completos ?</inlineHelpText>
        <label>¿Portan despachadores uniforme completo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pozo_de_monitoreo__c</fullName>
        <inlineHelpText>¿Existen pozos de monitoreo u observación?</inlineHelpText>
        <label>Pozo de monitoreo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenta_PVP_actualizado__c</fullName>
        <inlineHelpText>¿Presenta PVP actualizado?</inlineHelpText>
        <label>¿Presenta PVP actualizado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presi_n_de_EDS_es_la_exigida_por_ley__c</fullName>
        <inlineHelpText>¿La presión de la EDS es la exigida por la ley? (3.000 psi - 3.075 psi)</inlineHelpText>
        <label>¿Presión de EDS es la exigida por ley?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prueba_de_calidad_fondo_del_tanque__c</fullName>
        <inlineHelpText>¿Verificar que existan evidencias de muestras de la calidad del fondo del tanque, se debe tomar una muestra con vampiro?</inlineHelpText>
        <label>Prueba de calidad fondo del tanque</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prueba_de_tanques__c</fullName>
        <inlineHelpText>¿Verificar que los tanques tengan pruebas de hermeticidad menores a 5 años?</inlineHelpText>
        <label>Prueba de tanques</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pruebas_en_el_surtidor__c</fullName>
        <inlineHelpText>¿Verificar que existan evidencias de muestras semanales (Recomendación) tomadas en el surtidor al combustible, las cuales deben garantizar que el producto se encuentre limpio, claro y brillante?</inlineHelpText>
        <label>Pruebas en el surtidor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Puesta_a_tierra__c</fullName>
        <inlineHelpText>¿Existe puesta a tierra para el descargue del combustible?</inlineHelpText>
        <label>Puesta a tierra</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <label>Regional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salmuera_en_tanque_de_almacenamiento__c</fullName>
        <inlineHelpText>¿Verificar existencia de  liquido de salmuera en el intermedio y la no presencia u olor a combustible?</inlineHelpText>
        <label>Salmuera en tanque de almacenamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfacci_n_general_servicio_entregado__c</fullName>
        <inlineHelpText>Satisfacción general con el servicio entregado.</inlineHelpText>
        <label>Satisfacción general servicio entregado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_alizaci_n_descargue_de_combustible__c</fullName>
        <inlineHelpText>¿Se cuenta con señalización para el descargue de combustible. (valla o cono de señalización)?</inlineHelpText>
        <label>Señalización descargue de combustible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_alizaci_n_islas__c</fullName>
        <inlineHelpText>¿Se encuentra señalización en la zona de islas con las normas de seguridad (No fumar, no hablar por celular)?</inlineHelpText>
        <label>Señalización islas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_encuentra_adecuada_zona_de_espera__c</fullName>
        <inlineHelpText>¿Se encuentra adecuada la zona de espera?</inlineHelpText>
        <label>¿Se encuentra adecuada zona de espera?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_encuentra_la_iluminaci_n_fachada__c</fullName>
        <inlineHelpText>¿Se encuentra la iluminación de la fachada en buen estado?</inlineHelpText>
        <label>¿Se encuentra la iluminación fachada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_encuentran_los_jardines_en_buen_esta__c</fullName>
        <inlineHelpText>¿Se encuentran los jardines en buen estado?</inlineHelpText>
        <label>¿Se encuentran los jardines buen estado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_encuentran_los_sellos_instalados__c</fullName>
        <inlineHelpText>¿Se encuentran los sellos instalados?</inlineHelpText>
        <label>¿Se encuentran los sellos instalados?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Se_encuentran_uniformes_en_buen_estado__c</fullName>
        <inlineHelpText>¿Se encuentran los uniformes en buen estado?</inlineHelpText>
        <label>¿Se encuentran uniformes en buen estado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_de_protecci_n_contra_caidas__c</fullName>
        <inlineHelpText>¿Sistema de protección contra caídas -  Cuenta con Arnés certificado, Cuenta con 2 Eslingas de restricción graduables de máx. 1.20 mt de longitud, Cuenta con Eslinga en &quot;Y&quot; de 60 cms para el ascenso al carrotanque?</inlineHelpText>
        <label>Sistema de protección contra caidas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spill_Container__c</fullName>
        <inlineHelpText>¿Verificar la existencia del spill container, la funcionalidad de la  válvula de purga y la ausencia de fisuras en las paredes?</inlineHelpText>
        <label>Spill Container</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tabla_de_aforo__c</fullName>
        <inlineHelpText>¿La tabla de aforo es legible, tiene una vigencia menor a 5 años esta en mm y esta acreditada por una empresa experta en aforo de tanques?</inlineHelpText>
        <label>Tabla de aforo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tanques_de_almacenamiento__c</fullName>
        <inlineHelpText>¿Verificar ausencia de agua en el interior del tanque, ¿se tiene rutina diaria de verificación? (verificar con bara)</inlineHelpText>
        <label>Tanques de almacenamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Ausencia_combustible_pozo_de_monit__c</fullName>
        <inlineHelpText>¿Verificar ausencia de combustible  u olor?</inlineHelpText>
        <label>Ausencia de combust en pozo de monitoreo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Caja_contenedora_de_bombas_amb_ope__c</fullName>
        <inlineHelpText>¿Verificar ausencia de combustible, agua, residuos, fugas de combustible en conexiones?</inlineHelpText>
        <label>Caja contenedora de bombas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Calif_pilar_Calidad_Operaci_n2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Calificación pilar Calidad Operación</inlineHelpText>
        <label>Calificación pilar Calidad Operación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Calif_pilar_Calidad_infraestructu2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Calificación pilar Calidad infraestructura</inlineHelpText>
        <label>Calificación pilar Calidad infraestructu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Calif_pilar_Seguridad_infraestruc2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Calificación pilar Seguridad infraestructura</inlineHelpText>
        <label>Calificación pilar Seguridad infraestruc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Calif_pilar_Seguridad_operaci_n2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Calificación pilar Seguridad Operación</inlineHelpText>
        <label>Calificación pilar Seguridad operación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Califi_pilar_ambiental_Operaci_n2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Calificación pilar ambiental Operación</inlineHelpText>
        <label>Calificación pilar ambiental Operación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Califi_pilar_ambiental_infraestruct2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Calificación pilar ambiental infraestructura</inlineHelpText>
        <label>Calificación pilar ambiental infraestruc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Calificacion_EDS__c</fullName>
        <formula>( Ter_Califi_pilar_ambiental_infraestruct2__c *0.20) + 
( Ter_Califi_pilar_ambiental_Operaci_n2__c *0.15) + 
( Ter_Calif_pilar_Calidad_infraestructu2__c *0.10) +
( Ter_Calif_pilar_Calidad_Operaci_n2__c *0.25)+
( Ter_Calif_pilar_Seguridad_infraestruc2__c *0.10)+
( Ter_Calif_pilar_Seguridad_operaci_n2__c *0.20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calificación EDS</inlineHelpText>
        <label>Calificación EDS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Canal_perimetral_zona_islas_segu_inf__c</fullName>
        <inlineHelpText>¿Existe el canal perimetral alrededor de zona de islas que este en buen estado?</inlineHelpText>
        <label>Canal perimetral zona islas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Cartera__c</fullName>
        <label>Cartera</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Cliente_oculto_servicios_GNV__c</fullName>
        <description>Este campo contiene el cliente oculto servicios GNV.</description>
        <label>Cliente oculto servicios (GNV)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Cliente_oculto_servicios_liquidos__c</fullName>
        <description>Este campo contiene el cliente oculto servicios.</description>
        <label>Cliente oculto servicios (Liquidos)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Comentarios_Pila_Seguridad_Operacion__c</fullName>
        <inlineHelpText>Comentarios elementos de protección personal</inlineHelpText>
        <label>Comentarios elementos de protección pnal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Comentarios_Pilar_Seguridad_infra__c</fullName>
        <inlineHelpText>Comentarios oficinas administrativas</inlineHelpText>
        <label>Comentarios oficinas administrativas</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Comentarios_calidad_infraestructura__c</fullName>
        <inlineHelpText>Comentarios general</inlineHelpText>
        <label>Comentarios general</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Comentarios_pilar_Calidad_Operacion__c</fullName>
        <inlineHelpText>Comentarios control de inventarios</inlineHelpText>
        <label>Comentarios control de inventarios</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Comentarios_pilar_ambiental_Infraest__c</fullName>
        <inlineHelpText>Comentarios zona despacho cumbustibles</inlineHelpText>
        <label>Comentarios zona despacho cumbustibles</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Comentarios_pilar_ambiental_Operacio__c</fullName>
        <inlineHelpText>Comentarios zona almacenamiento combustibles</inlineHelpText>
        <label>Comentarios zona almacenamiento combusti</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Compromisos__c</fullName>
        <label>Compromisos</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Desarrollo_reunion__c</fullName>
        <description>Este campo contiene el desarrollo de la reunión.</description>
        <label>Desarrollo reunión</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_EDS_Confiable__c</fullName>
        <label>EDS Confiable</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Ejecutivo_de_cuenta__c</fullName>
        <formula>Ter_nombre_de_cliente__r.Ter_Nombre_Ejecutivo__r.FirstName+&quot; &quot;+Ter_nombre_de_cliente__r.Ter_Nombre_Ejecutivo__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo de cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Elementos_de_proteccion_alturas__c</fullName>
        <inlineHelpText>¿Casco con barbuquejo, Gafas de seguridad (Requeridas para el descargue), guantes de protección, botas de seguridad (Uno por trabajador), protección respiratoria tipo cartucho para vapores de combustibles?</inlineHelpText>
        <label>EPPs para trabajo en alturas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Escuelas_colombia__c</fullName>
        <label>Escuelas colombia</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Esta_la_estacion_limpia__c</fullName>
        <description>Este campo consulta si la estación esta limpia.</description>
        <inlineHelpText>¿ Está la estación limpia?</inlineHelpText>
        <label>¿ Está la estación limpia?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Estan_los_banos_publicos_limpios__c</fullName>
        <description>Este campo indica si los baños están limpios y en buen estado.</description>
        <inlineHelpText>¿Están los baños públicos limpios y en buen estado?</inlineHelpText>
        <label>¿Están los baños públicos limpios?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Existencias_en_trampa_de_grasas__c</fullName>
        <inlineHelpText>¿Verificar la existencia de caja toma muestras?</inlineHelpText>
        <label>Existencias en TdeGr ZC y Caja Toma Mues</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Extintores_pil_segridad_ope__c</fullName>
        <inlineHelpText>¿Existencia de un extintor  satélite de 70 kg (140 lb) vigente y cargado. Si la EDS cuenta con más de 4 mangueras de suministro?</inlineHelpText>
        <label>Extintores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Extintores_zona_des__c</fullName>
        <inlineHelpText>¿Existencia Dos extintores de 10 Kg (20 lb) por cada isla?</inlineHelpText>
        <label>Extintores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Locativos_zona_de_islas_Decreto_1521__c</fullName>
        <inlineHelpText>¿Existen pisos en concreto alrededor de las islas, en buen estado con las juntas de ¿dilatación cerradas y sin grietas ?</inlineHelpText>
        <label>Locativos zona de islas Decreto 1521</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Manejo_de_residuos_amb_opera__c</fullName>
        <inlineHelpText>¿Orden y clasificación correcta  de residuos de acuerdo a sus características?</inlineHelpText>
        <label>Manejo de residuos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Nombre_EDS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Este campo corresponde a la relación entre la estación de servicio y las actas.</description>
        <label>Nombre EDS</label>
        <referenceTo>Ter_Estacion_de_Servicio__c</referenceTo>
        <relationshipLabel>Actas/Encuestas</relationshipLabel>
        <relationshipName>Actas_Encuesta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Nombre_EDS_lista_relacionada__c</fullName>
        <description>Este campo se utiliza para indicar en la lista relacionada de actas el nombre de la EDS.</description>
        <formula>Ter_Nombre_EDS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre EDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Objetivo_de_reunion__c</fullName>
        <description>Este campo contiene el objetivo de la reunión.</description>
        <label>Objetivo de reunión</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Observaciones_generales__c</fullName>
        <description>Este campo contiene las observaciones del acta de tipo seguimiento comercial EDS</description>
        <label>Observaciones generales</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_PITS__c</fullName>
        <label>PITS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Precio__c</fullName>
        <label>Precio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Proyecto_colon__c</fullName>
        <label>Proyecto colón</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_Puntaje_Aspectos_fisicos_EDS__c</fullName>
        <description>Este campo contiene el puntaje de los aspectos físicos de la EDS.</description>
        <formula>IF(ISPICKVAL(Ter_Esta_la_estacion_limpia__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Ter_Estan_los_banos_publicos_limpios__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Se_encuentran_los_jardines_en_buen_esta__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Est_n_las_canecas_de_basura_limpias__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Se_encuentra_adecuada_zona_de_espera__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Est_el_canopy_en_buen_estado__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Se_encuentra_la_iluminaci_n_fachada__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Existe_buena_se_alizaci_n_informativa__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(Existe_se_alizaci_n_promocional__c, &quot;Si&quot;), 0.10, 0) +
IF(ISPICKVAL(buena_se_alizaci_n_promocional_de_marke__c, &quot;Si&quot;), 0.10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Puntaje Aspectos físicos EDS</inlineHelpText>
        <label>Puntaje Aspectos físicos EDS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>